Non-PCH build failed after JDK-8199712 (Flight Recorder)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • jfr
    • b14

        x86_64:

        * For target hotspot_variant-server_libjvm_gtest_objs_BUILD_GTEST_LIBJVM_link:
        /home/shade/trunks/jdk-jdk/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/jfrCheckpointManager.o: In function `StreamWriterHost<MallocAdapter<1048576ul>, JfrCHeapObj>::flush(unsigned long)':
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
        /home/shade/trunks/jdk-jdk/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/jfrCheckpointManager.o:/home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: more undefined references to `os::write(int, void const*, unsigned int)' follow
        /home/shade/trunks/jdk-jdk/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/jfrChunkWriter.o: In function `StreamWriterHost<MallocAdapter<1048576ul>, JfrCHeapObj>::close_fd()':
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:127: undefined reference to `os::close(int)'
        /home/shade/trunks/jdk-jdk/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/jfrChunkWriter.o: In function `StreamWriterHost<MallocAdapter<1048576ul>, JfrCHeapObj>::flush(unsigned long)':
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
           ... (rest of output omitted)
        * For target hotspot_variant-server_libjvm_objs_BUILD_LIBJVM_link:
        /home/shade/trunks/jdk-jdk/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/jfrCheckpointManager.o: In function `StreamWriterHost<MallocAdapter<1048576ul>, JfrCHeapObj>::flush(unsigned long)':
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
        /home/shade/trunks/jdk-jdk/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/jfrCheckpointManager.o:/home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: more undefined references to `os::write(int, void const*, unsigned int)' follow
        /home/shade/trunks/jdk-jdk/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/jfrChunkWriter.o: In function `StreamWriterHost<MallocAdapter<1048576ul>, JfrCHeapObj>::close_fd()':
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:127: undefined reference to `os::close(int)'
        /home/shade/trunks/jdk-jdk/build/linux-x86_64-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/jfrChunkWriter.o: In function `StreamWriterHost<MallocAdapter<1048576ul>, JfrCHeapObj>::flush(unsigned long)':
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
        /home/shade/trunks/jdk-jdk/src/hotspot/share/jfr/writers/jfrStreamWriterHost.inline.hpp:76: undefined reference to `os::write(int, void const*, unsigned int)'
           ... (rest of output omitted)

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: