8203251: Non-PCH build failed after JDK-8199712 (Flight Recorder)

Reviewed-by: mgronlun