src/hotspot/share/jfr/recorder/repository/jfrChunkWriter.cpp
@@ -30,6 +30,7 @@
 #include "jfr/utilities/jfrTypes.hpp"
 #include "runtime/mutexLocker.hpp"
 #include "runtime/os.hpp"
+#include "runtime/os.inline.hpp"
 
 const u2 JFR_VERSION_MAJOR = 2;
 const u2 JFR_VERSION_MINOR = 0;
