src/hotspot/share/jfr/recorder/storage/jfrStorage.cpp
@@ -39,6 +39,7 @@
 #include "logging/log.hpp"
 #include "runtime/mutexLocker.hpp"
 #include "runtime/orderAccess.inline.hpp"
+#include "runtime/os.inline.hpp"
 #include "runtime/safepoint.hpp"
 #include "runtime/thread.hpp"
 
